--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,3 @@
 .content {
   flex-grow: 1;
 }
-.resources {
-  height: 100vh;
-}
