--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ a {
 
 .resources {
   text-align: center;
+  margin-bottom: 20rem;
 }
 @media screen and (max-width: 500px) {
   .resources {
@@ -177,7 +178,6 @@ a {
 @media screen and (max-width: 500px) {
   .resources__item {
     padding: 2rem;
-    flex-basis: content;
   }
 }
 .resources__item > h3 {
@@ -298,10 +298,6 @@ div[class^=blog__showcase] > img {
 
 .content {
   flex-grow: 1;
-}
-
-.resources {
-  height: 100vh;
 }
 
 /*# sourceMappingURL=style.css.map */
